# recipe-idea

./: .gitignore  README.md
back/: Cargo.toml
back/src/: lib.rs  main.rs  recipes.rs
back/src/db/: mod.rs
back/src/db/model/: mod.rs  recipes_model.rs
